--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -12,7 +12,6 @@ spring:
     groovy:
         template:
             check-template-location: false
-
 ---
 grails:
     mime:
@@ -80,23 +79,23 @@ endpoints:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    driverClassName: com.mysql.jdbc.Driver
+    username: root
+    password: 123
 
 environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:mysql://webserver.dev/ecclesia_devel
     test:
         dataSource:
             dbCreate: update
-            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:mysql://webserver.dev/ecclesia_test
     production:
         dataSource:
             dbCreate: update
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:mysql://webserver.dev/ecclesia_prod
             properties:
                 jmxEnabled: true
                 initialSize: 5
@@ -113,5 +112,5 @@ environments:
                 testOnBorrow: true
                 testWhileIdle: true
                 testOnReturn: false
-                jdbcInterceptors: ConnectionState
-                defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+                jdbcInterceptors: ConnectionState;StatementCache(max=200)
+                defaultTransactionIsolation: java.sql.Connection.TRANSACTION_READ_COMMITTED
