--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'org.akhikhl.gretty'
 
-// JDK 7
+// JDK 8
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -14,12 +14,16 @@ repositories {
 dependencies {
  
 	compile 'ch.qos.logback:logback-classic:1.1.3'
-	compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+	compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
+  compile 'org.springframework:spring-tx:4.2.2.RELEASE'
+  compile 'org.springframework:spring-orm:4.2.2.RELEASE'
 	compile 'javax.servlet:jstl:1.2'
+  compile 'org.apache.commons:commons-dbcp2:2.1.1'
+  compile 'mysql:mysql-connector-java:5.1.37'
 	
 	//include in compile only, exclude in the war
 	providedCompile 'javax.servlet:servlet-api:2.5'
-	
+	providedCompile 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.1'
 }
 
 //Gretty
