--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
   compile 'org.springframework:spring-tx:4.2.2.RELEASE'
   compile 'org.springframework:spring-orm:4.2.2.RELEASE'
+  compile 'org.hibernate:hibernate-core:4.2.21.Final'
 	compile 'javax.servlet:jstl:1.2'
   compile 'org.apache.commons:commons-dbcp2:2.1.1'
   compile 'mysql:mysql-connector-java:5.1.37'
