--- a/build.gradle
+++ b/build.gradle
@@ -12,18 +12,25 @@ repositories {
 }
 
 dependencies {
- 
 	compile 'ch.qos.logback:logback-classic:1.1.3'
-	compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
+	
+  compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
   compile 'org.springframework:spring-tx:4.2.2.RELEASE'
   compile 'org.springframework:spring-orm:4.2.2.RELEASE'
+  
   compile 'org.hibernate:hibernate-core:4.2.21.Final'
   compile 'org.hibernate:hibernate-entitymanager:4.2.21.Final'
   compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final'
-	compile 'javax.servlet:jstl:1.2'
+	
+  compile 'javax.servlet:jstl:1.2'
+  
   compile 'org.apache.commons:commons-dbcp2:2.1.1'
   compile 'mysql:mysql-connector-java:5.1.37'
-  compile 'org.thymeleaf:thymeleaf-spring4:2.1.4.RELEASE'
+  compile 'com.h2database:h2:1.4.190'
+  
+  compile 'org.apache.tiles:tiles-jsp:3.0.5'
+  compile 'org.apache.tiles:tiles-el:3.0.5'
+  
   compile 'org.springframework.security:spring-security-config:4.0.3.RELEASE'
   compile 'org.springframework.security:spring-security-web:4.0.3.RELEASE'
 	
@@ -45,6 +52,5 @@ buildscript {
 
 gretty {
   port = 8080
-  //contextPath = 'spring4'
   servletContainer = 'jetty9'
 }
