Implementing custom login form page

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
   
   compile 'org.springframework.security:spring-security-config:4.0.3.RELEASE'
   compile 'org.springframework.security:spring-security-web:4.0.3.RELEASE'
+  compile 'org.springframework.security:spring-security-taglibs:4.0.3.RELEASE'
 	
 	//include in compile only, exclude in the war
 	providedCompile 'javax.servlet:servlet-api:2.5'
