--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
   compile 'org.hibernate:hibernate-core:4.3.11.Final'
   compile 'org.hibernate:hibernate-entitymanager:4.3.11.Final'
   compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+  
+  compile 'org.hibernate:hibernate-validator:4.3.2.Final'
 	
   compile 'javax.servlet:jstl:1.2'
   
