Adding test task in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,14 @@ dependencies {
 	providedCompile 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.1'
 }
 
+test {
+    jacoco {
+        append = false
+        destinationFile = file('$buildDir/jacoco/jacocoTest.exec')
+        classDumpFile = file('$buildDir/jacoco/classpathdumps')
+    }
+}
+
 //Gretty
 buildscript {
   repositories {
