--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-	compile 'ch.qos.logback:logback-classic:1.1.3'
+	compile 'ch.qos.logback:logback-classic:1.+'
 	
   compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
   compile 'org.springframework:spring-tx:4.2.2.RELEASE'
@@ -28,22 +28,26 @@ dependencies {
 	
   compile 'javax.servlet:jstl:1.2'
   
-  compile 'org.apache.commons:commons-dbcp2:2.1.1'
-  compile 'mysql:mysql-connector-java:5.1.37'
-  compile 'com.h2database:h2:1.4.190'
+  compile 'org.apache.commons:commons-dbcp2:2.+'
+  compile 'mysql:mysql-connector-java:5.+'
+  compile 'com.h2database:h2:1.+'
   
-  compile 'org.apache.tiles:tiles-jsp:3.0.5'
-  compile 'org.apache.tiles:tiles-el:3.0.5'
+  compile 'org.apache.tiles:tiles-jsp:3.+'
+  compile 'org.apache.tiles:tiles-el:3.+'
   
   compile 'org.springframework.security:spring-security-config:4.0.3.RELEASE'
   compile 'org.springframework.security:spring-security-web:4.0.3.RELEASE'
   compile 'org.springframework.security:spring-security-taglibs:4.0.3.RELEASE'
+  
+  compile 'org.modelmapper:modelmapper:0.7.+'
 	
 	//include in compile only, exclude in the war
 	providedCompile 'javax.servlet:servlet-api:2.5'
 	providedCompile 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.1'
   
-  testCompile 'junit:junit:+'
+  testCompile 'junit:junit:4.+'
+  testCompile 'org.mockito:mockito-core:1.+'
+  testCompile 'org.dbunit:dbunit:+'
 }
 
 //Gretty
