--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
   testCompile 'junit:junit:4.+'
   testCompile 'org.mockito:mockito-core:1.+'
   testCompile 'org.dbunit:dbunit:+'
-  testCompile 'org.hamcrest:hamcrest-junit:2.+'
+  testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
 
 //Gretty
