--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -9,3 +9,4 @@ hibernate.show_sql=false
 hibernate.format_sql=false
 
 files.folder=file://~/ecclesia_files
+cdn.path=http://localhost:8080/ecclesia/cdn
