--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,10 @@ dependencies {
   compile 'ch.qos.logback:logback-classic:1.+'
 	
   // spring
-  compile 'org.springframework:spring-webmvc:4.2.2.RELEASE'
-  compile 'org.springframework:spring-tx:4.2.2.RELEASE'
-  compile 'org.springframework:spring-orm:4.2.2.RELEASE'
-  compile 'org.springframework:spring-test:4.2.2.RELEASE'
+  compile 'org.springframework:spring-webmvc:4.2.5.RELEASE'
+  compile 'org.springframework:spring-tx:4.2.5.RELEASE'
+  compile 'org.springframework:spring-orm:4.2.5.RELEASE'
+  compile 'org.springframework:spring-test:4.2.5.RELEASE'
   
   // hibernate
   compile 'org.hibernate:hibernate-core:4.3.11.Final'
@@ -44,9 +44,9 @@ dependencies {
   compile 'org.apache.tiles:tiles-el:3.+'
   
   // spring security
-  compile 'org.springframework.security:spring-security-config:4.0.3.RELEASE'
-  compile 'org.springframework.security:spring-security-web:4.0.3.RELEASE'
-  compile 'org.springframework.security:spring-security-taglibs:4.0.3.RELEASE'
+  compile 'org.springframework.security:spring-security-config:4.0.4.RELEASE'
+  compile 'org.springframework.security:spring-security-web:4.0.4.RELEASE'
+  compile 'org.springframework.security:spring-security-taglibs:4.0.4.RELEASE'
   
   // password validator
   compile 'org.passay:passay:1.+'
@@ -61,6 +61,7 @@ dependencies {
 	providedCompile 'javax.servlet:servlet-api:2.5'
 	providedCompile 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.1'
   
+  // testing pile
   testCompile 'net.serenity-bdd:serenity-core:1.+'
   testCompile 'net.serenity-bdd:serenity-junit:1.+'
   testCompile 'net.serenity-bdd:serenity-jbehave:1.+'
