--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -8,5 +8,6 @@ hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=false
 hibernate.format_sql=false
 
-files.folder=file://~/ecclesia_files
+private.files.folder=file://~/ecclesia_files/private
+public.files.folder=file://~/ecclesia_files/public
 cdn.path=http://localhost:8080/ecclesia/cdn
