Injecting the public files URL on the file service

--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -10,4 +10,4 @@ hibernate.format_sql=false
 
 private.files.folder=file://~/ecclesia_files/private
 public.files.folder=file://~/ecclesia_files/public
-cdn.path=http://localhost:8080/ecclesia/cdn
+public.files.url=http://localhost:8080/ecclesia/cdn
