--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -11,3 +11,4 @@ hibernate.format_sql=false
 private.files.folder=~/ecclesia_files/private
 public.files.folder=~/ecclesia_files/public
 public.files.url=http://localhost:8080/ecclesia/cdn
+server.url=http://localhost:8080
