Updating default properties

--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -8,7 +8,7 @@ hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=false
 hibernate.format_sql=false
 
-private.files.folder=~/ecclesia_files/private
-public.files.folder=~/ecclesia_files/public
+private.files.folder=ecclesia_files/private
+public.files.folder=ecclesia_files/public
 public.files.url=http://localhost:8080/ecclesia/cdn
 server.url=http://localhost:8080
