Improving code quality

--- a/build.gradle
+++ b/build.gradle
@@ -176,8 +176,8 @@ check.dependsOn jacocoTestReport
 
 tasks.withType(FindBugs) {
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
     }
 }
 
