Adding organization repository and part of the service

--- a/directory-domain/build.gradle
+++ b/directory-domain/build.gradle
@@ -1,1 +1,6 @@
 apply plugin: 'java-library'
+
+dependencies {
+    testCompile "junit:junit:${jUnitVersion}"
+    testCompile "org.assertj:assertj-core:${assertJVersion}"
+}
