--- a/directory/build.gradle
+++ b/directory/build.gradle
@@ -22,13 +22,18 @@ dependencies {
     compile project(":commons")
     compile project(":directory-domain")
 
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+    compile "org.springframework.boot:spring-boot-starter-aop"
+    compile "org.springframework.cloud:spring-cloud-starter-config"
+
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-jetty"
 
     compile "org.springframework.boot:spring-boot-starter-validation"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "com.zaxxer:HikariCP:${hikariCPVersion}"
-    //compile "org.flywaydb:flyway-core:${flywayVersion}"
+    compile "org.flywaydb:flyway-core:${flywayVersion}"
     compile 'org.hibernate:hibernate-ehcache'
 
     compile "com.h2database:h2:${h2DatabaseVersion}"
