--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
 jdk: oraclejdk8
+before_install:
+  - sudo apt-get install jq
+  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
 after_success:
   - curl -s https://codecov.io/bash | bash
+  - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
