--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ before_install:
   - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
 after_success:
   - curl -s https://codecov.io/bash | bash
+  - export CODACY_PROJECT_TOKEN=432a153c54574f298bc92f4f5a13941a
   - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
