--- a/directory/build.gradle
+++ b/directory/build.gradle
@@ -5,12 +5,12 @@ buildscript {
 }
 
 plugins {
+    id "io.spring.dependency-management"
     id "net.ltgt.apt" version "0.19"
     id 'net.ltgt.apt-idea' version "0.19"
-    id "io.spring.dependency-management"
 }
 
-apply plugin: "org.springframework.boot"
+apply plugin: 'org.springframework.boot'
 
 dependencyManagement {
     imports {
@@ -43,6 +43,7 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
     compile "org.springframework.boot:spring-boot-devtools"
+
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile "io.rest-assured:rest-assured:${restAssuredVersion}"
 }
