--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 assertJVersion=3.9.1
 flywayVersion=5.1.4
+gradleLombokVersion=2.0
 h2DatabaseVersion=1.4.197
 hikariCPVersion=2.7.9
 jUnitVersion=4.12
@@ -14,3 +15,5 @@ springDependencyManagementVersion=1.0.5.RELEASE
 springfoxSwagger2Version=2.9.2
 springRetry=1.2.2.RELEASE
 springSecurityOAuthVersion=2.3.2.RELEASE
+
+version='LOCAL-SNAPSHOT'
