--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,7 @@ buildscript {
 }
 
 plugins {
-    id "com.github.ben-manes.versions" version "0.20.0"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "org.jetbrains.intellij" version "0.3.3"
 }
 
 subprojects {
@@ -33,19 +31,9 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    compileJava.options*.compilerArgs = [
-            "-Xlint:serial", "-Xlint:varargs", "-Xlint:cast", "-Xlint:classfile",
-            "-Xlint:dep-ann", "-Xlint:divzero", "-Xlint:empty", "-Xlint:finally",
-            "-Xlint:overrides", "-Xlint:path", "-Xlint:processing", "-Xlint:static",
-            "-Xlint:try", "-Xlint:fallthrough", "-Xlint:rawtypes", "-Xlint:deprecation",
-            "-Xlint:unchecked", "-Xlint:-options", "-Xlint:deprecation"]
+    compileJava.options*.compilerArgs = ["-Xlint:all"]
 
-    compileTestJava.options*.compilerArgs = [
-            "-Xlint:serial", "-Xlint:-varargs", "-Xlint:cast", "-Xlint:classfile",
-            "-Xlint:dep-ann", "-Xlint:divzero", "-Xlint:empty", "-Xlint:finally",
-            "-Xlint:overrides", "-Xlint:path", "-Xlint:processing", "-Xlint:static",
-            "-Xlint:try", "-Xlint:-fallthrough", "-Xlint:-rawtypes", "-Xlint:-deprecation",
-            "-Xlint:-unchecked", "-Xlint:-options", "-Xlint:deprecation"]
+    compileTestJava.options*.compilerArgs = ["-Xlint:all"]
 
     repositories {
         jcenter()
