--- a/directory/build.gradle
+++ b/directory/build.gradle
@@ -1,15 +1,12 @@
 buildscript {
     dependencies {
+        classpath "io.franzbecker:gradle-lombok:${gradleLombokVersion}"
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     }
 }
 
-plugins {
-    id "io.spring.dependency-management"
-    id "net.ltgt.apt" version "0.19"
-    id 'net.ltgt.apt-idea' version "0.19"
-}
-
+apply plugin: "io.franzbecker.gradle-lombok"
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 
 dependencyManagement {
@@ -19,33 +16,29 @@ dependencyManagement {
 }
 
 dependencies {
-    compile project(":commons")
-    compile project(":directory-domain")
+    implementation project(":commons")
 
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
-    compile "org.springframework.boot:spring-boot-starter-aop"
-    compile "org.springframework.cloud:spring-cloud-starter-config"
+    implementation "org.springframework.boot:spring-boot-starter-aop"
+    implementation "org.springframework.cloud:spring-cloud-starter-config"
 
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.boot:spring-boot-starter-jetty"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-jetty"
 
-    compile "org.springframework.boot:spring-boot-starter-validation"
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile "com.zaxxer:HikariCP:${hikariCPVersion}"
-    compile "org.flywaydb:flyway-core:${flywayVersion}"
-    compile 'org.hibernate:hibernate-ehcache'
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "com.zaxxer:HikariCP:${hikariCPVersion}"
+    implementation "org.flywaydb:flyway-core:${flywayVersion}"
+    implementation 'org.hibernate:hibernate-ehcache'
 
-    compile "com.h2database:h2:${h2DatabaseVersion}"
-    compile "mysql:mysql-connector-java:${mysqlConnectorVersion}"
+    runtime "com.h2database:h2:${h2DatabaseVersion}"
+    runtime "mysql:mysql-connector-java:${mysqlConnectorVersion}"
 
-    compile "org.mapstruct:mapstruct-jdk8:${mapstructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    implementation "org.springframework.boot:spring-boot-devtools"
 
-    compile "org.springframework.boot:spring-boot-devtools"
-
-    testCompile "org.springframework.boot:spring-boot-starter-test"
-    testCompile "io.rest-assured:rest-assured:${restAssuredVersion}"
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
 }
 
 defaultTasks 'bootRun'
