--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 assertJVersion=3.9.1
+checkstyleToolVersion=8.17
 flywayVersion=5.1.4
 gradleLombokVersion=2.0
+gradleSpotbugsVersion=1.6.9
 h2DatabaseVersion=1.4.197
 hikariCPVersion=2.7.9
 jUnitVersion=4.12
