--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -1,15 +1,11 @@
-plugins {
-    id "io.spring.dependency-management"
-}
-
 apply plugin: "java-library"
 
 description = "Common utilities"
 
 dependencies {
     compileOnly "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-    compileOnly "org.slf4j:slf4j-api:1.7.25"
+    compileOnly "org.slf4j:slf4j-api"
 
     testImplementation "junit:junit:${jUnitVersion}"
-    testImplementation "org.assertj:assertj-core:${assertJVersion}"
+    testCompile "org.assertj:assertj-core:${assertJVersion}"
 }
