--- a/directory/build.gradle
+++ b/directory/build.gradle
@@ -9,6 +9,8 @@ apply plugin: "io.franzbecker.gradle-lombok"
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 
+description = "Directory storage users and group information"
+
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
@@ -28,17 +30,14 @@ dependencies {
 
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
-    implementation "com.zaxxer:HikariCP:${hikariCPVersion}"
-    implementation "org.flywaydb:flyway-core:${flywayVersion}"
     implementation 'org.hibernate:hibernate-ehcache'
 
-    runtime "com.h2database:h2:${h2DatabaseVersion}"
-    runtime "mysql:mysql-connector-java:${mysqlConnectorVersion}"
+    runtime "com.h2database:h2"
+    runtime "mysql:mysql-connector-java"
 
     implementation "org.springframework.boot:spring-boot-devtools"
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
 }
 
 defaultTasks 'bootRun'
