--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,13 @@
 assertJVersion=3.9.1
-flywayVersion=5.1.4
+checkstyleToolVersion=8.17
+gradleCpdVersion=1.2
 gradleLombokVersion=2.0
-h2DatabaseVersion=1.4.197
-hikariCPVersion=2.7.9
+gradleSpotbugsVersion=1.6.9
 jUnitVersion=4.12
-mapstructVersion=1.2.0.Final
-mysqlConnectorVersion=5.1.46
-restAssuredVersion=3.1.0
-serenityJBehaveVersion=1.44.0
-serenityVersion=2.0.17
-springBootVersion=2.0.3.RELEASE
+springBootVersion=2.1.2.RELEASE
 springCloudVersion=Finchley.RELEASE
-springDependencyManagementVersion=1.0.5.RELEASE
+springDependencyManagementVersion=1.0.6.RELEASE
 springfoxSwagger2Version=2.9.2
 springRetry=1.2.2.RELEASE
-springSecurityOAuthVersion=2.3.2.RELEASE
 
 version='LOCAL-SNAPSHOT'
